--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "start-prod": "NODE_ENV=prod webpack-dev-server",
-    "build": "webpack",
-    "build-prod": "NODE_ENV=prod webpack"
+    "build": "rimraf ./dist && tslint --project . && webpack",
+    "build-prod": "rimraf ./dist && tslint --project . && NODE_ENV=prod webpack"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/karan-rawal/react-typescript-todo#readme",
   "devDependencies": {
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.4",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
@@ -29,5 +32,9 @@
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
+  },
+  "dependencies": {
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1"
   }
 }
