--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
     "rimraf": "^2.6.2",
@@ -42,6 +43,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1"
