--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.1",
+    "@types/reactstrap": "^6.0.3",
     "awesome-typescript-loader": "^5.2.1",
     "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.0",
@@ -43,9 +44,11 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap": "^4.1.3",
+    "material-design-icons": "^3.0.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.4.0"
   }
 }
